--- a/braun/css/fonts.css
+++ b/braun/css/fonts.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=fonts.css.map */
+@font-face{font-family:"Helvetica";src:url(../fonts/HelveticaNeueCyr-Roman.woff) format("woff"),url(../fonts/HelveticaNeueCyr-Roman.woff2) format("woff2");font-display:swap;font-weight:400;font-style:normal}@font-face{font-family:"Helvetica";src:url(../fonts/HelveticaNeueCyr-Medium.woff) format("woff"),url(../fonts/HelveticaNeueCyr-Medium.woff2) format("woff2");font-display:swap;font-weight:500;font-style:normal}@font-face{font-family:"Helvetica";src:url(../fonts/HelveticaNeueCyr-Bold.woff) format("woff"),url(../fonts/HelveticaNeueCyr-Bold.woff2) format("woff2");font-display:swap;font-weight:700;font-style:normal}
+/*# sourceMappingURL=fonts.css.map */
