--- a/braun/sass/media.sass
+++ b/braun/sass/media.sass
@@ -1,8 +1,29 @@
+@media screen and ( max-width: 1720px )
+    .banner
+        &_second
+            .deco
+                &:nth-of-type(2)
+                    left: -172px
+                &:nth-of-type(3)
+                    right: -106px
+        &_third
+            .deco
+                &:nth-of-type(3)
+                    right: -110px
+        &_fourth
+            .deco
+                display: none
+    
 @media screen and ( max-width: 1480px )
     .burger
         position: relative
         margin-left: auto
         transform: none
+
+    .banner
+        &_second, &_third
+            .deco
+                display: none
 
 @media screen and ( max-width: 1370px )
     .header
@@ -11,6 +32,24 @@
 
     .main
         padding-top: 70px
+
+@media screen and ( max-width: 1170px )
+    .banner
+        &__title, &__title *
+            font-size: 40px
+            line-height: 50px
+        &_third
+            .banner
+                &__person
+                    max-height: 130%
+                    left: auto
+                    right: -20px
+        &_fourth
+            .banner
+                &__content
+                    margin-right: 0
+                &__person
+                    max-height: 110%
 
 @media screen and ( max-width: 1070px )
     .row
@@ -21,6 +60,36 @@
     .item
         &__content
             padding: 25px
+
+    .banner
+        &_first
+            .banner
+                &__wrap
+                    padding: 70px 0px 130px
+                &__title, &__title *
+                    br
+                        display: none
+                &__title
+                    max-width: 440px
+
+@media screen and ( max-width: 1010px )
+    .banner
+        &_second
+            .banner
+                &__content
+                    margin-right: 0
+
+@media screen and ( max-width: 990px )
+    .banner
+        &_third
+            .container
+                z-index: 2
+            .banner
+                &__wrap
+                    padding: 185px 0px 73px
+                &__person
+                    z-index: -1
+                    right: -130px
 
 @media screen and ( max-width: 940px )
     .row
@@ -44,6 +113,77 @@
             width: 50%
             margin: 0 auto
 
+    .banner
+        &_second
+            .banner
+                &__wrap
+                    padding: 110px 0px 125px
+        &_fourth
+            .banner
+                &__person
+                    left: -226px
+
+@media screen and ( max-width: 860px )
+    .banner
+        &_third
+            .banner
+                &__title, &__title *
+                    max-width: 370px
+                    br
+                        display: none
+        &_fourth
+            .banner
+                &__wrap
+                    padding: 234px 0px 136px
+                &__person
+                    max-height: 100%
+                    left: -226px
+
+@media screen and ( max-width: 760px )
+    .banner
+        &_third
+            .banner
+                &__title, &__title *
+                    max-width: none
+                &__content
+                    margin: 0 auto
+                    padding: 35px 50px
+                    background-color: rgba(238, 239, 241, 0.7)
+                &__wrap
+                    padding: 345px 0px 70px
+                &__person
+                    bottom: -10px
+        &_fourth
+            .banner
+                &__person
+                    left: -276px
+
+@media screen and ( max-width: 730px )
+    .banner
+        &_first
+            .banner
+                &__bg img
+                    width: 120%
+
+@media screen and ( max-width: 690px )
+    .banner
+        &_fourth
+            .container
+                z-index: 2
+            .banner
+                &__wrap
+                    padding:  234px 0px 80px
+                &__person
+                    left: 40%
+                    transform: translateX(-50%)
+                    z-index: -1
+                    max-height: 100%
+                    bottom: -10px
+                &__content
+                    padding: 35px 50px
+                    background-color: rgba(238, 239, 241, 0.7)
+                    margin: 0 auto
+
 @media screen and ( max-width: 650px )
     .logo
         width: 70px
@@ -63,6 +203,18 @@
         &__container
             &_small
                 grid-template-rows: repeat(2, 320px)
+
+    .main
+        padding-top: 60px
+
+    .banner
+        &__title, &__title *
+            font-size: 36px
+            line-height: 42px
+
+    .button
+        &_video
+            margin-top: 30px
 
 @media screen and ( max-width: 620px )
     .row
@@ -84,18 +236,78 @@
             width: 100%
             margin: auto
 
-@media screen and ( max-width: 620px )
-    .item
-        &_small
-            padding-top: 35px
+@media screen and ( max-width: 565px )
+    .banner
+        &_first
+            .banner
+                &__title, &__title *
+                    br
+                        display: none
+                &__wrap
+                &__content
+                    max-width: 400px
 
-    .row
-        &__container
-            &_small
-                grid-template-rows: repeat(3, 300px)
+@media screen and ( max-width: 520px )
+
+    .banner
+        &_second
+            .banner
+                &__bg img
+                    width: 190%
+                &__wrap
+                    padding: 330px 0px 45px
+                &__content
+                    margin: 0 auto
+                    padding: 35px 50px
+                    background-color: rgba(238, 239, 241, 0.7)
+        &_third
+            .banner
+                &__content
+                    padding: 20px
+        &_fourth
+            .banner
+                &__wrap
+                    padding:  234px 0px 50px
+                &__person
+
+@media screen and ( max-width: 420px )
+    .banner
+        &__title, &__title *
+            font-size: 24px
+            line-height: 30px
+        &_first
+            .banner
+                &__wrap
+                    padding: 70px 0px 90px
+                &__content
+                    max-width: 330px
+        &_second
+            .banner
+                &__wrap
+                    padding: 230px 0px 45px
+                &__content
+                    padding: 20px 40px
+                &__bg img
+                    width: 200%
+        &_third
+            .banner
+                &__person
+                    max-height: 100%
+        &_fourth
+            .banner
+                &__content
+                    padding: 20px 40px
+                &__person
+                    left: 30%
 
 @media screen and ( max-width: 370px )
     .menu
         &__link
             font-size: 20px
             padding: 15px 0px
+
+    .banner
+        &_third
+            .banner
+                &__wrap
+                    padding: 275px 0px 30px
