--- a/braun/sass/media.sass
+++ b/braun/sass/media.sass
@@ -65,6 +65,12 @@
                 &__person
                     max-height: 110%
 
+@media screen and ( max-width: 1120px )
+    .banner
+        &_third
+            .play
+                display: none
+
 @media screen and ( max-width: 1070px )
     .row
         &__container
@@ -153,6 +159,12 @@
                     max-height: 100%
                     left: -226px
 
+@media screen and ( max-width: 810px )
+    .banner
+        &_second
+            .play
+                display: none
+
 @media screen and ( max-width: 760px )
     .banner
         &_third
@@ -168,6 +180,8 @@
                 &__person
                     bottom: -10px
         &_fourth
+            .play
+                display: none
             .banner
                 &__person
                     left: -276px
