--- a/braun/sass/style.sass
+++ b/braun/sass/style.sass
@@ -103,6 +103,9 @@ section
         display: flex
         align-items: center
         justify-content: flex-start
+        svg
+            width: 100px
+            object-fit: cover
     &.scrolled
         .header
             &__wrap
@@ -113,9 +116,10 @@ section
     & + &
         margin-left: 45px
     &_braun
-        max-height: 40px
     &_ixbt
         max-height: 50px
+        object-fit: cover
+        transform: scale(1.4) translate(-1px, 6px)
 
 .burger
     position: absolute
@@ -597,4 +601,9 @@ section
         text-align: center
         font-size: 18px
         line-height: 34px
-        margin-top: 17px
+        margin-top: 8px
+    &__logo
+        svg
+            height: auto
+            width: 190px
+            fill: #000000
