--- a/braun/sass/style.sass
+++ b/braun/sass/style.sass
@@ -359,6 +359,8 @@ section
     width: 100%
     overflow: hidden
     position: relative
+    opacity: 0
+    // transition: opacity 1.5s ease-out 0s
     &_small
         padding-top: 52px
         display: flex
