--- a/dacha/sass/style.sass
+++ b/dacha/sass/style.sass
@@ -102,6 +102,7 @@ h1, h2, h3, h4, h5
         font-size: 16px
         padding: 20px 35px
         border-radius: 40px
+        overflow-anchor: none
         &:hover
             
         &:active
