--- a/dentko/sass/style.sass
+++ b/dentko/sass/style.sass
@@ -464,8 +464,10 @@ ul:not([class]) li
     &__body
         max-width: 515px
         margin-top: -30px !important
+        h1, h2, h3, &>span
+            display: block
         .uk-text-large
-            display: inline-block
+            display: inline-block 
             margin-bottom: 20px
             font-size: 16px
             line-height: 24px
@@ -773,10 +775,11 @@ ul:not([class]) li
         background-color: #F6F9FB
         box-shadow: none
         transition: all .2s ease-out 0s
-    .uk-card-title
+    .uk-card-title, h2, h3, h4, h5, h1
         text-align: center
         font-size: 18px
         font-weight: bold
+        width: 100%
     &__head
         padding: 10px 0px
     .uk-slider-items
@@ -1141,7 +1144,7 @@ ul:not([class]) li
         color: $green
         font-size: 14px
         font-weight: 500
-    &__title
+    &__title, &__body h1, &__body h2, &__body h3, &__body h4, &__body h5
         color: $green
         font-size: 24px
         font-weight: 900
@@ -1416,6 +1419,7 @@ ul:not([class]) li
         background-size: contain
         left: 0
         filter: grayscale(0)
+        margin: 0 !important
     &__page
         box-shadow: none
         padding-right: 70px
