--- a/citadel/sass/media.sass
+++ b/citadel/sass/media.sass
@@ -53,6 +53,9 @@
     body
         height: auto
 
+    .swiper-slide:not(.swiper-slide-active)
+        opacity: 1
+
     .main
         height: auto
         .swiper-wrapper
