--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -246,6 +246,7 @@ section
         background-image: url(../img/partner_7-g.png)
     &:nth-child(8) .project__logo
         background-image: url(../img/partner_8-g.png)
+        background-size: 60%
     &__logo
         border-radius: 5px
         background-color: #fff
