--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -67,6 +67,11 @@ section
         align-items: center
         padding: 55px 0px
 
+.logo
+    &__img
+        max-width: 212px
+        height: auto
+
 .nav
     max-width: 425px
     width: 100%
