--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -260,6 +260,7 @@ section
         overflow: hidden
         background-position: center
         background-repeat: no-repeat
+        background-size: 70%
         svg
             position: absolute
             top: 50%
