--- a/pool-spa/sass/style.sass
+++ b/pool-spa/sass/style.sass
@@ -23,10 +23,12 @@ input::-webkit-inner-spin-button
 input[type=number]
   -moz-appearance: textfield
 
+html, body
+    overflow-x: hidden
+
 body
     position: relative
-    height: 100vh
-    overflow-x: hidden
+    min-height: 100vh
     display: flex
     flex-direction: column
 
@@ -179,6 +181,7 @@ body
             display: flex
             justify-content: space-between
             align-items: center
+            margin-left: 10px
         &-social
             display: flex
             align-items: center
@@ -201,6 +204,7 @@ body
         margin-left: auto
         display: inline-block
         position: relative
+        padding-left: 30px
         &::before
             background-image: url(../img/svg/phone-call.svg)
             background-size: contain
@@ -209,13 +213,14 @@ body
             width: 20px
             position: absolute
             top: 50%
-            left: -25px
+            left: 0px
             display: inline-block
             content: ''
             transform: translateY(-50%)
     &__map
         margin-left: 0px
         font-size: 14px
+        margin-right: 10px
         &::before
             background-image: url(../img/svg/maps-and-flags.svg)
     &__main
@@ -225,13 +230,6 @@ body
             display: flex
             align-items: center
             justify-content: space-between
-        .logo
-            left: 60px
-            position: absolute
-            top: 50%
-            transform: translateY(-50%)
-            &__img
-                max-height: 60px
     &__buttons
         position: absolute
         display: flex
@@ -269,6 +267,7 @@ body
         img
             max-height: 25px
             margin-right: 10px
+            width: auto
 
     &.fixed
         .header
@@ -276,11 +275,22 @@ body
                 padding: 0 60px
                 height: 0
 
+.logo
+    left: -60px
+    position: absolute
+    display: block
+    top: 50%
+    transform: translate(-100%, -50%)
+    &__img
+        max-height: 60px
+        width: auto
+        fill: #1c3253
+
 .nav
     flex-shrink: 0
     width: 100%
     max-width: 680px
-    margin-left: 50px
+    margin-left: 0px
     &__list
         flex-shrink: 0
         display: flex
@@ -305,6 +315,7 @@ body
         &:focus
             outline: none
     button.nav__link
+        padding-left: 40px
         span, &::before, &::after
             content: ''
             display: inline-block
@@ -313,7 +324,7 @@ body
             background-color: #acadae
             position: absolute
             top: 50%
-            left: -20px
+            left: 13px
             transform: translate(-50%, -50%)
             transition:  top .15s ease-in .15s, transform .15s ease-in 0s, opacity .1s ease-in .15s
         &::before
@@ -353,6 +364,14 @@ body
         background-repeat: no-repeat
         background-position: center
         background-image: url(../img/svg/1.svg)
+    &__button
+        display: none
+        height: 25px
+        width: 25px
+        background-image: url(../img/svg/1.svg)
+        background-size: contain
+        background-repeat: no-repeat
+        background-position: center
     &__input
         background-color: #f8f9fa
         padding: 10px
@@ -363,6 +382,40 @@ body
         border: none
         &:focus
             outline: none
+
+.burger
+    display: inline-block
+    height: 40px
+    width: 40px
+    position: relative
+    margin-left: 20px
+    span, &::before, &::after
+        content: ''
+        display: inline-block
+        width: 25px
+        height: 2px
+        background-color: #acadae
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        transition:  top .15s ease-in .15s, transform .15s ease-in 0s, opacity .1s ease-in .15s
+    &::before
+        top: calc( 9px + 50% )
+    &::after
+        top: calc( -9px + 50% )
+    &.active
+        span, &::before, &::after
+            transform: translate(-50%, -50%)
+            top: 50%
+            transition:  top .15s ease-in 0s, transform .15s ease-in .15s, opacity .15s ease-in .1s
+            background-color: $main_yellow
+        span
+            opacity: 0
+        &::before
+            transform: translate(-50%, -50%) rotate(45deg)
+        &::after
+            transform: translate(-50%, -50%) rotate(-45deg)
 
 .main
     margin-top: 126px
@@ -532,6 +585,7 @@ body
     position: relative
     background-color: #fff
     box-shadow: 0 0 0 1px $border_grey
+    overflow: hidden
     &__img
         position: absolute
         top: 50%
@@ -539,6 +593,7 @@ body
         transform: translate(-50%, -50%)
         opacity: 0
         transition: opacity .5s ease-out 0s
+        max-width: 90%
         &_grey
             opacity: 1
     &:hover
@@ -564,6 +619,9 @@ body
         background-position: center
         background-repeat: no-repeat
         transition-duration: .45s
+        &-title
+            font-size: 16px
+            line-height: 24px
         &-body
             height: 100px
             width: 78.4%
@@ -573,6 +631,7 @@ body
             display: flex
             align-items: center
             justify-content: center
+            padding: 0px 10px
         &:hover
             background-size: 104% 104%
 
@@ -684,7 +743,7 @@ body
             padding: 5px 10px
 
 .form
-    padding: 40px 0px
+    padding: 40px 15px
     &__container
         width: 100%
         max-width: 1400px
@@ -707,6 +766,7 @@ body
         grid-gap: 30px
         .button
             box-shadow: none
+            padding: 15px
             &:hover
                 box-shadow: 0 0 0 1px #fff
     &__input
@@ -756,6 +816,7 @@ body
             background-size: 80% 80%
             background-repeat: no-repeat
             background-position: center
+            flex-shrink: 0
         input:checked + &-checkbox
             background-image: url(../img/svg/check.svg)
         input
@@ -842,7 +903,7 @@ body
         display: block
         text-transform: none
         width: 100%
-        text-align-last: left
+        text-align: left
         position: relative
         overflow-anchor: none
         &::before, &::after
@@ -1099,6 +1160,7 @@ body
     &__img
         display: block
         margin: 25px auto 0px
+        max-width: 100%
 
 
 //
