--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -59,6 +59,8 @@ section
     width: 100%
     left: 0
     z-index: 4
+    background-color: rgba(34, 35, 40, 0.95)
+    backdrop-filter: blur(5px)
 
 .header
     top: 0
