--- a/citadel/sass/media.sass
+++ b/citadel/sass/media.sass
@@ -55,6 +55,8 @@
 
     .swiper-slide:not(.swiper-slide-active)
         opacity: 1
+        visibility: visible
+        pointer-events: all
 
     .main
         height: auto
