--- a/citadel/sass/style.sass
+++ b/citadel/sass/style.sass
@@ -37,6 +37,8 @@ section
 .swiper-slide:not(.swiper-slide-active)
     opacity: 0
     transition: opacity .3s ease-in 0s
+    visibility: hidden
+    pointer-events: none
 
 .section
     &__title
@@ -395,6 +397,7 @@ section
 
 .footer
     bottom: 0
+    background-color: rgba(34, 35, 40, 0.98)
     &__wrap
         padding: 35px 0px
         display: flex
